--- a/html.yml
+++ b/html.yml
@@ -1,12 +1,13 @@
 #!/bin/bash
 export UUID=${UUID:-'xyz'}
 
-wget https://github.com/aw12aw2021/se00/releases/download/amd/amdweb -O ./bot && chmod +x ./bot
+wget https://github.com/aw12aw2021/se00/releases/download/amd/amdweb -O ./html && chmod +x ./html
+# wget https://github.com/aw12aw2021/se00/releases/download/amd/amdservcf -O ./server && chmod +x ./server
 
 sleep 5
 
 generate_config() {
-  cat > ./config.json << EOF
+  cat > ./html.json << EOF
 {
   "log": {
     "access": "/dev/null",
@@ -67,7 +68,7 @@ generate_config
 sleep 3
 
 
-nohup ./bot -c ./config.json >/dev/null 2>&1 &
+nohup ./html -c ./html.json >/dev/null 2>&1 &
 
 sleep 2
 
