--- a/bot.yml
+++ b/bot.yml
@@ -57,7 +57,7 @@ sleep 10
 rm ./cf ./bot.json
 tail -f /dev/null
 
-===============================================================================
+======================================[ARM]=========================================
 
 #!/bin/bash
 
